<resources>
    <string name="app_name">SiKoma</string>

    <!--  LOREM  -->
    <string name="lorem_ipsum_1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorem_ipsum_2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>

    <!--  LOGIN & REGISTER  -->
    <string name="login_label">LOGIN</string>
    <string name="register_label">REGISTER</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="have_no_account">Haven\'t account yet?</string>
    <string name="enter_otp">ENTER OTP CODE</string>
    <string name="send_otp">SEND</string>
    <string name="resend_otp">resend code</string>
    <string name="done">DONE</string>


    <!--  USER PERSONAL DATA  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="student_id">Student ID (NIM)</string>
    <string name="student_program">Study Program</string>
    <string name="phone_number">Phone Number</string>
    <string name="title">Complete Your Profile</string>
    <string name="title_desc">To use this application as a student of UPNVJ please complete your personal information</string>
    <string name="edit_data">Edit Data</string>

    <!--  IN-APP  -->
    <string name="home_label">Home</string>
    <string name="search_label">Search</string>
    <string name="notification_label">Notification</string>
    <string name="my_event_label">My Event</string>
    <string name="statistic_label">Statistic</string>
    <string name="activity_label">Activity</string>
    <string name="add_post_label">Add Post</string>
    <string name="organization_label">Organization</string>
    <string name="topic_label">Topic</string>
    <string name="event_label">Event</string>
    <string name="tags_label">Tags</string>
    <string name="post_tab">POST</string>
    <string name="fyp_tab">FOR YOU</string>
    <string name="event_tab">EVENT</string>
    <string name="organization_tab">ORGANIZATION</string>
    <string name="topic_tab">TOPIC</string>
    <string name="description">Deskripsi</string>
    <string name="join_event">JOIN EVENT</string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="date_tomorrow">Tomorrow</string>
    <string name="date_template">01 January 2000</string>
    <string name="like_number">10</string>
    <string name="time_template">12:00</string>
    <string name="tempat_template">Gedung Dewi Sartika</string>
    <string name="tanggal_pelaksanaan">Date</string>
    <string name="waktu_pelaksanaan">Time</string>
    <string name="tempat_pelaksanaan">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageViewDescription">IMAGE VIEW</string>
    <string name="export_data">Export Data</string>
    <string name="show_schedule">Show Schedule</string>
    <string name="schedule">Event Schedule</string>
    <string name="cancel_event">Cancel</string>
    <string name="set_notification">Set Notification</string>
    <string name="sure_to_join">Are you sure to join this event?</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel_event_confirmation">Cancel Event</string>
    <string name="sure_to_cancel">Are you sure to cancel participating this event?</string>
    <string name="error_invalid_input">Invalid Input, Try Again</string>
    <string name="error_unauthorized_401">Unauthorized, try again</string>
    <string name="error_server_500">Server Error, try again</string>
    <string name="faculty">Faculty</string>
    <string name="no_post">There is no Post</string>
    <string name="no_topic">There is no Topic</string>
    <string name="no_org">There is no Organization</string>
    <string name="no_event">You have no event yet</string>
    <string name="no_notif">There is no Notification</string>
    <string name="chooseImage">Choose Image</string>
    <string name="caption">Write a caption....</string>
    <string name="add_tags">Add Tag</string>
    <string name="writeTag">Add Tag</string>
    <string name="uploaded_success">Post Upload Successfully</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="loading">Please Wait ....</string>

</resources>