<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitePrimary"
    tools:context=".ui.fragments.CompleteBioFragment">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imageViewDescription"
        android:src="@drawable/background_biodata"
        android:scaleType="fitXY"
        android:layout_marginBottom="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/whitePrimary"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/title_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_desc"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/whitePrimary"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="370dp"
        android:layout_height="570dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        android:layout_marginTop="90dp"
        app:cardBackgroundColor="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/title_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_edit_text_2"
                android:hint="@string/email"
                android:textColorHint="@color/blueSecondary"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:layout_marginTop="35dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_edit_text_2"
                android:hint="@string/full_name"
                android:textColorHint="@color/blueSecondary"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="13dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/input_nim"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_edit_text_2"
                android:hint="@string/student_id"
                android:textColorHint="@color/blueSecondary"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="13dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/input_study_program"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_edit_text_2"
                android:hint="@string/student_program"
                android:textColorHint="@color/blueSecondary"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="13dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_edit_text_2"
                android:hint="@string/phone_number"
                android:textColorHint="@color/blueSecondary"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="13dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_done"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/bluePrimary"
                android:layout_marginHorizontal="20dp"
                android:text="@string/done"
                android:letterSpacing="0.3"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                app:cornerRadius="10dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>