<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout_schedue"
    android:elevation="10dp"
    android:background="@color/blackTransparent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/whiteSecondary"
        android:layout_margin="8dp"
        app:cardElevation="20dp"
        android:elevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/back_button_schedule"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/imageViewDescription"
                    android:src="@drawable/icon_arrow_back"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule"
                    android:textSize="20sp"
                    android:textColor="@color/bluePrimary"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/imageViewDescription"
                android:src="@drawable/icon_activity"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_pelaksanaan"
                android:textSize="15sp"
                android:textColor="@color/bluePrimary"
                android:fontFamily="@font/poppins_semibold"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_template"
                android:textSize="15sp"
                android:textColor="@color/bluePrimary"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/shape_schedule_value"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waktu_pelaksanaan"
                android:textSize="15sp"
                android:textColor="@color/bluePrimary"
                android:fontFamily="@font/poppins_semibold"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_template"
                android:textSize="15sp"
                android:textColor="@color/bluePrimary"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/shape_schedule_value"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempat_pelaksanaan"
                android:textSize="15sp"
                android:textColor="@color/bluePrimary"
                android:fontFamily="@font/poppins_semibold"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempat_template"
                android:textSize="15sp"
                android:textColor="@color/bluePrimary"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/shape_schedule_value"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
