<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitePrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.RegisterFragment">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imageViewDescription"
        android:src="@drawable/background_auth"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/logoAuth"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/imageViewDescription"
        android:src="@drawable/logo_auth"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/whiteSecondary"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/bluePrimary"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/email"
                android:textColorHint="@color/blueSecondary"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="8dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="13dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/password"
                android:textColorHint="@color/blueSecondary"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="8dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="13dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:backgroundTint="@color/bluePrimary"
                android:layout_marginHorizontal="20dp"
                android:text="@string/register_label"
                android:letterSpacing="0.3"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                app:cornerRadius="10dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/bluePrimary"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintEnd_toStartOf="@id/loginPage"/>

    <TextView
        android:id="@+id/loginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/blueSecondary"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintStart_toEndOf="@id/already"
        app:layout_constraintEnd_toEndOf="@id/card"/>

    <include
        android:visibility="gone"
        layout="@layout/item_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>