<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="20dp"
    android:background="@color/whitePrimary"
    android:paddingVertical="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        tools:src="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/post_author"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/organization_label"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/profile_pic"
        app:layout_constraintStart_toEndOf="@id/profile_pic"/>

    <TextView
        android:id="@+id/post_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum_1"
        android:textAlignment="textStart"
        android:textSize="15sp"
        android:maxLines="3"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/post_author"
        app:layout_constraintStart_toStartOf="@id/post_author"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/imageViewDescription"
        tools:src="@tools:sample/avatars"
        android:background="@color/bluePrimary"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/post_content"
        app:layout_constraintStart_toStartOf="@id/post_content"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/whiteSecondary"
        android:layout_marginTop="10dp"
        app:icon="@drawable/icon_like"
        app:iconTint="@color/bluePrimary"
        android:text="@string/like_number"
        android:textColor="@color/bluePrimary"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/post_image"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/bluePrimary"
        app:layout_constraintTop_toBottomOf="@id/button_like"
        app:layout_constraintEnd_toEndOf="@id/button_like"
        app:layout_constraintStart_toStartOf="@id/profile_pic"/>
</androidx.constraintlayout.widget.ConstraintLayout>
