<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="25dp"
    android:background="@drawable/shape_outline_view_2" >

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/blueSecondary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/organization_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:contentDescription="@string/imageViewDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_upn"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/organization_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/organization_tab"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/card"
        app:layout_constraintBottom_toTopOf="@id/organization_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card"/>

    <TextView
        android:id="@+id/organization_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/lorem_ipsum_2"
        android:maxLines="1"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/organization_label"
        app:layout_constraintBottom_toBottomOf="@id/card"
        app:layout_constraintStart_toEndOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>